# graphql-codegen

./: .gitignore  .pre-commit-config.yaml  Contributing.md  Readme.md  gen_doc.sh  gen_doc_with_includes.py  mkdocs.yml  pyproject.toml  test_clean.sh
.github/workflows/: docs.yml  tests.yml
docs/: index.md
docs/examples/: 00-hello.md  01-basic-types.md  01-interfaces-and-unions.md  01-scalars-enums.md  02-compute-directive.md  02-interfaces.md  03-expand-directive.md  03-method-directive.md  03-unions.md  04-compute-directive.md  04-expand-directive.md  05-default-directive.md  05-expand-directive.md
graphql_codegen/: __init__.py  cli.py  config.py  generator.py  parser.py
graphql_codegen/generator/: __init__.py  outputs.py  package.py  type_collector.py  types.py  utils.py
graphql_codegen/templates/: __init__.py  auto.py.j2  expandable.j2  flat.py.j2  macros.j2  mixins.j2  models.py.j2  package_init.py.j2  runtime_helpers.j2
test/inputs/minifound/: codegen.yaml  schema.graphql
test/inputs/smoothies/: codegen.yaml  schema.graphql
test/inputs/userpost/: codegen.yaml  schema.graphql
test/outputs/minifound/: __init__.py
test/outputs/minifound/tests/: test_line.py
test/outputs/smoothies/: __init__.py  compute_functions.py
test/outputs/smoothies/tests/: test_method_directive.py  test_smoothies.py
test/outputs/userpost/: __init__.py
test/outputs/userpost/runtime/: __init__.py  custom.py
test/outputs/userpost/tests/: test_userpost.py
