[tool.poetry]
name = "graphql-codegen"
version = "0.1.0"
description = "A Python tool to convert GraphQL SDL into typed Python classes with a pluggable runtime for directive-driven behaviours."
authors = ["clem.jambou@gmail.com"]
readme = "Readme.md"
keywords = ["graphql", "codegen", "pydantic", "python"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
click = "^8.1.7"
graphql-core = "^3.2.3"
pydantic = "^2.5.3" # Pydantic v2 is specified in Readme
Jinja2 = "^3.1.3"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3" # Or a more recent compatible version
pytest-cov = "^4.0.0"
ruff = "^0.1.0" # For linting, as per Readme
mypy = "^1.0" # For type checking, as per Readme
pre-commit = "^3.6.0"
types-PyYAML = "^6.0.0"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.0.0"
mkdocs-include-markdown-plugin = "^6.0.0"

[tool.poetry.scripts]
graphql-codegen = "graphql_codegen.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Ignore star imports in generated test output files
extend-per-file-ignores = {"test/outputs/*/__init__.py" = ["F403"]}
